# flickvault

./: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  V2.md  docker-compose.yaml  fly.toml  pyproject.toml
.github/workflows/: fly-deploy.yml
app/: ai_generate.py  auth.py  config.py  crud.py  database.py  dependencies.py  main.py  models.py  recommendation_preferences.py  schemas.py  tmdb.py  watch_decider.py
app/routers/: auth.py  collections.py  generate.py  movies.py
app/static/: style.css
app/templates/: base.html  collection.html  import.html  index.html  login.html  register.html
mcp_server/: server.py
scripts/: import_json.py
tests/: test_collection_picks.py  test_crud_recommendations.py  test_mcp_decision_tools.py  test_openrouter_generation.py  test_recommendation_preferences.py  test_template_decision_ui.py  test_watch_decider.py
